--- a/less/contact.less
+++ b/less/contact.less
@@ -5,5 +5,8 @@
     p {
         margin: 20px 0;
     }
+    @media @tablet {
+        padding: 0 10px;
+    }
    
 }
