--- a/less/cta.less
+++ b/less/cta.less
@@ -24,7 +24,7 @@
         margin: 0 82px 0 0;
 
         h1 {
-            font-size: 7rem;
+            font-size: 6rem;
         }
 
         button {
