--- a/less/header.less
+++ b/less/header.less
@@ -33,6 +33,10 @@ header {
     .logo {
         align-self: flex-end;
         margin: 28px 0 0 91px;
+        &:hover {
+          cursor: pointer;
+          .opacity;
+        }
 
         @media @tablet {
           order: -1;
