--- a/less/main-content.less
+++ b/less/main-content.less
@@ -24,6 +24,7 @@
          }
          @media @tablet {
              margin-bottom: 20px;
+             padding: 0 10px;
          }
      }
      }
@@ -54,6 +55,7 @@
              }
              @media @tablet {
                  margin-bottom: 20px;
+                 padding: 0 10px;
              }
          }
  
